creusot/tests/should_succeed/bug/682.coma

module C682_AddSome
  use prelude.UInt64
  use prelude.Int
  constant max0 : uint64 = (18446744073709551615 : uint64)
  use prelude.Borrow
  use prelude.Intrinsic
  predicate resolve0 (self : borrowed uint64) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve0 (self:borrowed uint64) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec add_some (a:borrowed uint64) (return'  (ret:()))= {[#"../682.rs" 4 11 4 32]  * a <= div (max0 : uint64) (2 : uint64)}
    (! bb0 
    [ bb0 = UInt64.add { * a} {[#"../682.rs" 7 10 7 11] (1 : uint64)} (fun (_ret':uint64) -> 
        [ &a <- { a with current = _ret' ; } ]
        -{resolve0 a}- [ &_0 <- [#"../682.rs" 6 25 8 1] () ] return' {_0}) ]
    )[ & _0 : () = any_l () : () | & a : borrowed uint64 = a ]  
    [ return' (result:())-> {[#"../682.rs" 5 10 5 17]  ^ a >  * a} (! return' {result}) ]
    
end
module C682_Foo
  use prelude.UInt64
  use prelude.Snapshot
  use prelude.Intrinsic
  use prelude.Borrow
  predicate resolve0 (self : borrowed uint64) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve0 (self:borrowed uint64) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  use prelude.Snapshot
  use prelude.Int
  constant max0 : uint64 = (18446744073709551615 : uint64)
  let rec add_some0 (a:borrowed uint64) (return'  (ret:()))= {[#"../682.rs" 4 11 4 32]  * a <= div (max0 : uint64) (2 : uint64)}
    any [ return' (result:())-> {[#"../682.rs" 5 10 5 17]  ^ a >  * a} (! return' {result}) ] 
  use prelude.Snapshot
  let rec foo (a:borrowed uint64) (return'  (ret:()))= {[#"../682.rs" 10 11 10 21]  * a = (3 : uint64)}
    (! bb0 
    [ bb0 = [ &a_p <- [#"../682.rs" 13 29 13 42] Snapshot.new ( * a) ] bb1
    | bb1 = Borrow.borrow_final <uint64> { * a} {Borrow.get_id a} (fun (_ret':borrowed uint64) -> [ &_7 <- _ret' ] 
        [ &a <- { a with current = ( ^ _7) ; } ]
        add_some0 {_7} (fun (_ret':()) -> [ &_6 <- _ret' ] bb2))
    | bb2 = -{resolve0 a}- {[@expl:assertion] [#"../682.rs" 15 18 15 27]  * a > Snapshot.inner a_p}
      [ &_0 <- [#"../682.rs" 12 24 16 1] () ] return' {_0} ]
    )
    [ & _0 : () = any_l () : ()
    | & a : borrowed uint64 = a
    | & a_p : Snapshot.snap_ty uint64 = any_l () : Snapshot.snap_ty uint64
    | & _6 : () = any_l () : ()
    | & _7 : borrowed uint64 = any_l () : borrowed uint64 ]
     [ return' (result:())-> {[#"../682.rs" 11 10 11 17]  ^ a >  * a} (! return' {result}) ] 
end
